results/classifier/118/review/1878628
user-level: 0.853
device: 0.816
graphic: 0.760
network: 0.747
register: 0.724
PID: 0.709
socket: 0.693
vnc: 0.683
files: 0.676
architecture: 0.676
ppc: 0.643
mistranslation: 0.575
semantic: 0.574
performance: 0.558
VMM: 0.552
boot: 0.501
arm: 0.501
risc-v: 0.480
permissions: 0.447
debug: 0.439
kernel: 0.424
TCG: 0.387
peripherals: 0.366
x86: 0.339
i386: 0.284
hypervisor: 0.250
virtual: 0.244
KVM: 0.176
assembly: 0.106
--------------------
kernel: 0.726
x86: 0.230
files: 0.072
TCG: 0.057
debug: 0.057
i386: 0.035
user-level: 0.031
register: 0.007
virtual: 0.005
PID: 0.004
semantic: 0.003
device: 0.002
network: 0.002
performance: 0.001
hypervisor: 0.001
assembly: 0.001
VMM: 0.001
architecture: 0.001
boot: 0.001
KVM: 0.001
graphic: 0.001
ppc: 0.001
peripherals: 0.001
socket: 0.001
arm: 0.001
permissions: 0.000
risc-v: 0.000
vnc: 0.000
mistranslation: 0.000

linux-user/mmap build failure using Clang 10

When building with Clang 10 on Fedora 32, we get:

    CC      linux-user/mmap.o
  linux-user/mmap.c:720:49: error: result of comparison 'unsigned long' > 18446744073709551615 is always false [-Werror,-Wtautological-type-limit-compare]
          if ((unsigned long)host_addr + new_size > (abi_ulong)-1) {
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~

Suggested fix: Use -Wno-tautological-type-limit-compare in configure:

https://<email address hidden>/msg699808.html


Patch posted:
https://lists.gnu.org/archive/html/qemu-devel/2020-06/msg00856.html

Merged as commit aabab96797a7d61989c25a7ca2b094591bbc74f9.

